--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,12 +6,17 @@ html
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
+
+    / Uncomment to include tailwind css
+    / = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
+
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body
-      = link_to '<= Back to Home Page', root_path unless current_page?(root_path)
-      = yield
-      p.notice
-        = notice
-      p.notice
-        = alert
+    = link_to '<= Back to Home Page', root_path unless current_page?(root_path)
+    = yield
+    p.notice
+      = notice
+    p.notice
+      = alert
+    / = render "layouts/flash"
