Added CSS to user authentication, user registration, and product index pages.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body
-    main.container.mx-auto.mt-28.px-5
-      = link_to 'Back to Home Page', root_path unless current_page?(root_path)
+    main.container.mx-auto.mt-28.mb-28.px-5
+      = link_to 'Back to Home Page', root_path, class: "link-get mb-5" unless current_page?(root_path)
       = yield
       = render "layouts/flash"
