--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -1,61 +1,53 @@
-h2
+h2.font-bold.text-4xl
   | Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  .field
+  .my-5
     = f.label :email
-  br
-  = f.email_field :email, autofocus: true, autocomplete: "email"
-  - resource.errors.full_messages_for(:email).each do |message|
-    div
-      = message
-  .field
+    = f.email_field :email, autofocus: true, autocomplete: "email", class: "form-field"
+    - resource.errors.full_messages_for(:email).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :first_name
-  br
-  = f.text_field :first_name, autofocus: true
-  - resource.errors.full_messages_for(:first_name).each do |message|
-    div
-      = message
-  .field
+    = f.text_field :first_name, autofocus: true, class: "form-field"
+    - resource.errors.full_messages_for(:first_name).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :last_name
-  br
-  = f.text_field :last_name, autofocus: true
-  - resource.errors.full_messages_for(:last_name).each do |message|
-    div
-      = message
-  .field
+    = f.text_field :last_name, autofocus: true, class: "form-field"
+    - resource.errors.full_messages_for(:last_name).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :contact_no
-  br
-  = f.text_field :contact_no, autofocus: true
-  - resource.errors.full_messages_for(:contact_no).each do |message|
-    div
-      = message
-  .field
+    = f.text_field :contact_no, autofocus: true, class: "form-field"
+    - resource.errors.full_messages_for(:contact_no).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :address
-  br
-  = f.text_field :address, autofocus: true
-  - resource.errors.full_messages_for(:address).each do |message|
-    div
-      = message
-  .field
+    = f.text_field :address, autofocus: true, class: "form-field"
+    - resource.errors.full_messages_for(:address).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :password
     - if @minimum_password_length
       em
-        | (
+        |< (
         = @minimum_password_length
         |  characters minimum)
-  br
-  = f.password_field :password, autocomplete: "new-password"
-  - resource.errors.full_messages_for(:password).each do |message|
-    div
-      = message
-  .field
+    = f.password_field :password, autocomplete: "new-password", class: "form-field"
+    - resource.errors.full_messages_for(:password).each do |message|
+      p.text-red-500
+        = message
+  .my-5
     = f.label :password_confirmation
-  br
-  = f.password_field :password_confirmation, autocomplete: "new-password"
-  - resource.errors.full_messages_for(:password_confirmation).each do |message|
-    div
-      = message
-  br
-  .actions
-    = f.submit "Sign up"
+    = f.password_field :password_confirmation, autocomplete: "new-password", class: "form-field"
+    - resource.errors.full_messages_for(:password_confirmation).each do |message|
+      p.text-red-500
+        = message
+  .my-5
+    = f.submit "Sign up", class: "btn-get"
 = render "users/shared/links"
