--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,138 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
 
-@layer components {
+
+/* @layer components {
+
   .btn-primary {
     @apply py-2 px-4 bg-blue-200;
   }
+  
+} */
+
+.btn-get {
+  @apply rounded-lg py-3 px-5 bg-green-600 text-white block font-medium w-fit;
 }
 
-*/
+.link-get {
+  @apply rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium w-fit;
+}
+
+.link-delete {
+  @apply rounded-lg py-3 px-5 bg-red-600 text-white block font-medium w-fit;
+}
+
+.msg-notice {
+  @apply rounded-lg py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium w-fit mt-5;
+}
+
+.msg-alert {
+  @apply rounded-lg py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium w-fit mt-5;
+}
+
+.form-field {
+  @apply rounded-md block shadow border border-gray-200 outline-none px-3 py-2 mt-2 w-fit;
+}
+
+.table {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr) 1fr;
+  column-gap: 2rem;
+  align-items: bottom;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-bottom: none;
+  border-collapse: collapse;
+}
+
+turbo-frame:last-child .table {
+  border-bottom: 1px solid #ccc;
+}
+
+turbo-frame:nth-child(even) .table {
+  background: #fafafa;
+}
+
+.datefield {
+  line-height: 1.12;
+}
+
+.pagy-nav,
+.pagy-nav-js {
+  @apply flex space-x-2 mt-4;
+}
+
+.pagy-nav .page a,
+.pagy-nav .page.active,
+.pagy-nav .page.prev.disabled,
+.pagy-nav .page.next.disabled,
+.pagy-nav-js .page a,
+.pagy-nav-js .page.active,
+.pagy-nav-js .page.prev.disabled,
+.pagy-nav-js .page.next.disabled {
+  @apply block rounded-lg px-3 py-1 text-sm text-gray-500 font-semibold bg-gray-200 shadow-md;
+
+  &:hover {
+    @apply bg-gray-300;
+  }
+
+  &:active {
+    @apply bg-gray-400 text-white;
+  }
+}
+
+.pagy-nav .page.prev.disabled,
+.pagy-nav .page.next.disabled,
+.pagy-nav-js .page.prev.disabled,
+.pagy-nav-js .page.next.disabled {
+  @apply text-gray-400 cursor-default;
+
+  &:hover {
+    @apply text-gray-400 bg-gray-200;
+  }
+
+  &:active {
+    @apply text-gray-400 bg-gray-200;
+  }
+}
+
+.pagy-nav .page.active,
+.pagy-nav-js .page.active {
+  @apply text-white cursor-default bg-gray-400;
+
+  &:hover {
+    @apply text-white bg-gray-400;
+  }
+
+  &:active {
+    @apply bg-gray-400 text-white;
+  }
+}
+
+
+.pagy-combo-nav-js {
+  @apply flex max-w-max rounded-full px-3 py-1 text-sm text-gray-500 font-semibold bg-gray-200 shadow-md;
+}
+
+.pagy-combo-nav-js .pagy-combo-input {
+  @apply bg-white px-2 rounded-sm
+}
+
+.pagy-combo-nav-js .page.prev,
+.pagy-combo-nav-js .page.next {
+  &:hover {
+    @apply text-gray-800;
+  }
+
+  &:active {
+    @apply text-gray-800;
+  }
+}
+
+.pagy-combo-nav-js .page.prev.disabled,
+.pagy-combo-nav-js .page.next.disabled {
+  @apply text-gray-400 cursor-default;
+}
+
+
