--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,27 +1,21 @@
 div.flex.flex-col.space-y-5
-    h1.font-bold.text-4xl
-        |   E-Commerce Application
+	h1.font-bold.text-4xl
+			|   E-Commerce Application
 
-    - if user_signed_in?
-        div.font-bold
-            |   Welcome
-            =< current_user.first_name
-            |!
-        br
+	- if user_signed_in?
+			div.font-bold
+					|   Welcome
+					=< current_user.first_name
+					|!
 
-        = link_to "#{current_user.is_admin? ? "View" : "Shop"} Products", products_path
-        br
+			= link_to "#{current_user.is_admin? ? "View" : "Shop"} Products", products_path, class: "link-get"
 
-        = link_to "View Purchases", payments_path
+			= link_to "View Purchases", payments_path, class: "link-get"
 
-        - if not current_user.is_admin?
-            br
-            = link_to "View Wish List", wish_lists_path
+			- if not current_user.is_admin?
+					= link_to "View Wish List", wish_lists_path, class: "link-get"
 
-        br
-        br
-
-        = link_to "Sign out", destroy_user_session_path, \
-        data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
-    - else
-        = link_to "Sign in", new_user_session_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium w-24"
+			= link_to "Sign out", destroy_user_session_path, \
+			data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "link-delete"
+	- else
+			= link_to "Sign in", new_user_session_path, class: "link-get"
