--- a/app/views/layouts/_flash.html.slim
+++ b/app/views/layouts/_flash.html.slim
@@ -1,10 +1,9 @@
-div id="notice"
-    - if notice.present?
-        div class="mx-auto md:w-2/3 w-full flex"
-            p class="mx-auto py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
-                = notice
+/ flash[:notice]
+- if notice.present?
+	p.notice.msg-notice
+		= notice
 
-    - if alert.present?
-        div class="mx-auto md:w-2/3 w-full flex"
-            p class="mx-auto py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block"
-                = alert
+/ flash[:alert]
+- if alert.present?
+	p.alert.msg-alert
+		= alert
