--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 /* @layer components {
 
   .btn-primary {
@@ -13,15 +11,23 @@
 } */
 
 .btn-get {
-  @apply rounded-lg py-3 px-5 bg-green-600 text-white block font-medium w-fit;
+  @apply rounded-lg py-3 px-5 bg-green-600 hover:bg-green-800 text-white block font-medium w-fit;
+}
+
+.link-back {
+  @apply bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border block border-gray-400 rounded shadow w-fit;
 }
 
 .link-get {
-  @apply rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium w-fit;
+   @apply rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white block font-medium w-fit;
 }
 
 .link-delete {
-  @apply rounded-lg py-3 px-5 bg-red-600 text-white block font-medium w-fit;
+  @apply rounded-lg py-3 px-5 bg-red-600 hover:bg-red-800 text-white block font-medium w-fit;
+}
+
+.create-product {
+  @apply rounded-lg px-3 py-2 mt-2 bg-green-600 hover:bg-green-800 text-white block font-medium w-fit;
 }
 
 .msg-notice {
