--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -21,7 +21,7 @@ div
 - if current_user.is_admin?
   = link_to "Edit Product", edit_product_path(@product)
   br
-  = link_to "Delete Product", product_path(@product), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
+  = link_to "Delete Product", product_path(@product, format: :html), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
 - else
   - if @product.quantity > 1
     - if @order.nil?
