--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -42,6 +42,22 @@
   @apply rounded-md block shadow border border-gray-200 outline-none px-3 py-2 mt-2 w-fit;
 }
 
+.select {
+  @apply rounded-md block shadow border border-gray-200 outline-none pr-11 py-2 mt-2 w-fit;
+}
+
+.checkbox-field {
+  @apply w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-lg focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600
+}
+
+.checkbox-label {
+  @apply ml-2 text-base font-medium text-black dark:text-black
+}
+
+.checkbox {
+  @apply flex items-center px-3 py-2 mt-2 border border-gray-200 rounded-md dark:border-gray-700 w-fit;
+}
+
 .table {
   display: grid;
   grid-template-columns: repeat(4, 2fr) 1fr;
