--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,40 +1,29 @@
 / product is a local variable which will be assigned with a product instance passed by the parent view
 
-= form_with model: product do |form|
-    div
-        = form.label :name
-        br
-        = form.text_field :name
-        - product.errors.full_messages_for(:name).each do |message|
-            div
-                = message
-    br
-    div
-        = form.label :description
-        br
-        = form.text_area :description
-        br
-        - product.errors.full_messages_for(:description).each do |message|
-            div
-                = message
-    br
-    div
-        = form.label :quantity
-        br
-        = form.number_field :quantity
-        br
-        - product.errors.full_messages_for(:quantity).each do |message|
-            div
-                = message
-    br
-    div
-        = form.label :price
-        br
-        = form.number_field :price
-        br
-        - product.errors.full_messages_for(:price).each do |message|
-            div
-                = message
-    br
-    div
-        = form.submit
+= form_with model: product do |f|
+	.my-5
+		= f.label :name
+		= f.text_field :name, class: "form-field"
+		- product.errors.full_messages_for(:name).each do |message|
+				p.text-red-500
+						= message
+	.my-5
+		= f.label :description
+		= f.text_area :description, class: "form-field"
+		- product.errors.full_messages_for(:description).each do |message|
+				p.text-red-500
+						= message
+	.my-5
+		= f.label :quantity
+		= f.number_field :quantity, class: "form-field"
+		- product.errors.full_messages_for(:quantity).each do |message|
+				p.text-red-500
+						= message
+	.my-5
+		= f.label :price
+		= f.number_field :price, class: "form-field"
+		- product.errors.full_messages_for(:price).each do |message|
+				p.text-red-500
+						= message
+	.my-5
+		= f.submit "Submit", class: "btn-get"
