--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -16,7 +16,7 @@
           path[stroke="none" d="M0 0h24v24H0z" fill="none"]
           path[d="M12 4c4.29 0 7.863 2.429 10.665 7.154l.22 .379l.045 .1l.03 .083l.014 .055l.014 .082l.011 .1v.11l-.014 .111a.992 .992 0 0 1 -.026 .11l-.039 .108l-.036 .075l-.016 .03c-2.764 4.836 -6.3 7.38 -10.555 7.499l-.313 .004c-4.396 0 -8.037 -2.549 -10.868 -7.504a1 1 0 0 1 0 -.992c2.831 -4.955 6.472 -7.504 10.868 -7.504zm0 5a3 3 0 1 0 0 6a3 3 0 0 0 0 -6z" stroke-width="0" fill="blue"]
           
-      = link_to edit_product_path(product) do
+      = link_to edit_product_path(product), data: { turbo_frame: "modal" } do
         svg.inline-block.w-4.h-4.ml-4.inline-block[fill="none" stroke="blue" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"]
           path[stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"]
 
