--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -5,7 +5,7 @@
     
     / For filtering
     div.flex.flex-row.space-x-5
-      = form_with url: products_path, method: :get, data: { turbo_frame: "products", turbo_action: "advance", controller: "form", action: "input->form#submit click->form#submit change->form#submit" } do
+      = form_with url: products_path, method: :get, data: { turbo_frame: "products_list", turbo_action: "advance", controller: "form", action: "input->form#submit click->form#submit change->form#submit" } do
         div.flex.flex-row.space-x-5
           div.checkbox
             = check_box_tag "stock", true, false, class: "checkbox-field"
@@ -14,7 +14,7 @@
           = text_field_tag "filter", nil, placeholder: "Search Product", class: "form-field"
 
       - if current_user.is_admin?
-        = link_to "Create New Product", new_product_path, class: "create-product"
+        = link_to "Create New Product", new_product_path, data: { turbo_frame: "modal" }, class: "create-product"
 
   .min-w-full.my-8
     .table.font-bold.min-w-full
@@ -27,8 +27,9 @@
       div
         | Price
       div
-    = turbo_frame_tag "products" do
-      = render @products
+    = turbo_frame_tag "products_list" do
+      = turbo_frame_tag "products" do
+        = render @products
       == pagy_nav(@pagy, link_extra: 'data-turbo-action="advance"')
 
 / / For Filtering
