Added turbo stream to cart and its orders

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -15,12 +15,13 @@
         svg.inline-block.w-4.h-4.inline-block[xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"]
           path[stroke="none" d="M0 0h24v24H0z" fill="none"]
           path[d="M12 4c4.29 0 7.863 2.429 10.665 7.154l.22 .379l.045 .1l.03 .083l.014 .055l.014 .082l.011 .1v.11l-.014 .111a.992 .992 0 0 1 -.026 .11l-.039 .108l-.036 .075l-.016 .03c-2.764 4.836 -6.3 7.38 -10.555 7.499l-.313 .004c-4.396 0 -8.037 -2.549 -10.868 -7.504a1 1 0 0 1 0 -.992c2.831 -4.955 6.472 -7.504 10.868 -7.504zm0 5a3 3 0 1 0 0 6a3 3 0 0 0 0 -6z" stroke-width="0" fill="blue"]
-          
-      = link_to edit_product_path(product), data: { turbo_frame: "modal" } do
-        svg.inline-block.w-4.h-4.ml-4.inline-block[fill="none" stroke="blue" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"]
-          path[stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"]
+      
+      - if current_user.is_admin?
+        = link_to edit_product_path(product), data: { turbo_frame: "modal" } do
+          svg.inline-block.w-4.h-4.ml-4.inline-block[fill="none" stroke="blue" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"]
+            path[stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"]
 
-      = link_to product_path(product), \
-        data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do
-          svg.inline-block.w-4.h-4.ml-4.inline-block[fill="none" stroke="red" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"]
-            path[stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"]
+        = link_to product_path(product), \
+          data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do
+            svg.inline-block.w-4.h-4.ml-4.inline-block[fill="none" stroke="red" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"]
+              path[stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"]
