--- a/app/views/reviews/_review.html.slim
+++ b/app/views/reviews/_review.html.slim
@@ -1,28 +1,27 @@
-- # A review partial for showing all reviews to a product
+/ A review partial for showing all reviews to a product
 - if current_user.id != review.user_id
-  h4
-    strong
+  .mb-5
+    h4.font-bold.text-lg
       = "#{review.user.first_name} #{review.user.last_name}"
-  p
-    strong
-      |  Score: 
-    = review.score
-  p
-    strong
-      |  Comment: 
-    = review.comment
-  - if not review.admin_reply.nil?
     p
       strong
-        |  Admin: 
-      = review.admin_reply
-  - else
-    - if current_user.is_admin?
-      - # The url is the same as model: [ @product, @product.reviews.build ]
-      = form_with url: product_review_path(id: review.id, product_id: review.product_id), method: :patch do |form|
-        p
-          = form.label "Reply:"
-          = form.text_area :admin_reply
-        p
-          = form.submit "Submit Reply"
-  br
+        |  Score: 
+      = review.score
+    p
+      strong
+        |  Comment: 
+      = review.comment
+    - if not review.admin_reply.nil?
+      p
+        strong
+          |  Admin: 
+        = review.admin_reply
+    - else
+      - if current_user.is_admin?
+        / The url is the same as model: [ @product, @product.reviews.build ]
+        = form_with url: product_review_path(id: review.id, product_id: review.product_id), method: :patch do |f|
+          .my-5
+            = f.label "Reply:"
+            = f.text_area :admin_reply, class: "form-field"
+          .my-5
+            = f.submit "Submit Reply", class: "btn-get"
