--- a/app/views/wish_lists/index.html.slim
+++ b/app/views/wish_lists/index.html.slim
@@ -1,7 +1,7 @@
-h1
-    |   Your Wish List:
+h1.font-bold.text-4xl
+    | Your Wish List:
 
-- if not @wish_lists.empty?
+- unless @wish_lists.empty?
     - @wish_lists.each do |wish_list|
         = link_to wish_list.product.name, product_path(wish_list.product)
         |   -
@@ -9,7 +9,7 @@ h1
             data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
         br
 - else
-    |   You have no products wishlisted yet.
+    | You have no products wishlisted yet.
 
 - if @pagy.pages > 1
     == pagy_nav(@pagy)
